# summary

./: .gitignore  Cargo.toml  Dockerfile  example.rs
src/: katana.rs  main.rs  string_utils.rs  titlegenerator.rs  util.rs  wordnet_stemmer.rs
src/summary/: katana.rs  mod.rs  wordnet_stemmer.rs
src/titlegenerator/: mod.rs
