[package]
authors = ["Kenan Sulayman <kenan@sly.mn>"]
name = "summary"
version = "0.1.0"

[dependencies]
rand = "0.3.15"
regex = "0.2.1"
rocket = "0.2.6"
rocket_codegen = "0.2.6"
rocket_contrib = "0.2.6"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"

[profile]

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "abort"
rpath = false
